# Rainbow-filly

./: .gitignore  INSTRUCTIONS-SH.md  LICENSE  README.md  bot.py  dockerfile  pyproject.toml  requirements.txt  setup.txt
config/: .env-template  config.py
data/: bot.py  character.json  tag.json
data/config/: channel.json  token.json
data/data/: alco.json  character.json  citat.json  tag.json
data/module/: check_tags.py  req.py  rnd.py  search_pic.py  status.py
module/: check_tags.py  handler_csv.py  req.py  rnd.py  search_pic.py  sqlite.py
sh/: _NAME  auto-build  auto-del  auto-rebuild  build  del  del-all-images  restart  run  start  start-log  start-t  stop  t  unstoppable
systemd/: install  rainbowfilly.service  restart  sh-cron-logs  sh-logs
